# chatsounds-web

./: .dockerignore  .gitignore  CNAME  Cargo.toml  Dockerfile  flake.nix  index.html  index.js  index.js.LICENSE.txt  package-lock.json  package.json
.cargo/: config.toml
.github/: .gitignore  dependabot.yml  flake.nix  renovate.json
.github/workflows/: build-and-release.yml  build.yml  docker.yml  github-pages.yml  release.yml  rust.yml  update-lock-files.yml  update-nix-hashes.yml
pkg/: package.json
src/: chatsounds.rs  lib.rs
src/exports/: mod.rs  types.rs
web/: .eslintrc.cjs  build-node.ts  build.ts  discord-embed-proxy.ts  jest.config.ts  tsconfig.json  webpack.config.ts
web/__tests__/: end-to-end.ts
web/src/: index.html  index.tsx  utils.ts
web/src/components/: App.tsx  Chatsounds.tsx  ChatsoundsLoading.tsx  ChatsoundsResult.tsx  ChatsoundsSearchResults.tsx  LoadedApp.tsx  WasmLoaded.tsx  WasmLoading.tsx
web/src/hooks/: useToaster.ts  useWasm.ts
web/src/styles/: index.css
