[package]
name = "chatsounds-web"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
async-lock = "3"
chatsounds = { git = "https://github.com/SpiralP/rust-chatsounds.git", default-features = false, features = [
    "memory",
    "playback",
    "vorbis",
    "wasm",
] }
console_error_panic_hook = "0.1"
futures = "0.3"
js-sys = "0.3"
lazy_static = "1"
rand = "0.8"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
# nix's wasm-pack requires wasm-bindgen's version to match this one;
# the docker version will download the correct version on demand.
# nix run github:NixOS/nixpkgs/nixos-24.11#wasm-bindgen-cli -- --version
wasm-bindgen = "=0.2.95"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true        # Link Time Optimization
codegen-units = 1 # Parallel Code Generation Units

[package.metadata.wasm-pack.profile.release]
# wasm-opt doesn't support arm64
# and it only saved us 30 KB
wasm-opt = false
