[package]
name = "chatsounds-web"
version = "2.1.46"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
async-lock = "=3.4.2"
chatsounds = { git = "https://github.com/SpiralP/rust-chatsounds.git", tag = "v3.0.2", default-features = false, features = [
    "memory",
    "playback",
    "vorbis",
    "wasm",
] }
console_error_panic_hook = "=0.1.7"
futures = "=0.3.32"
getrandom = { version = "=0.3.4", features = ["wasm_js"] }
js-sys = "=0.3.85"
lazy_static = "=1.5.0"
rand = "=0.9.2"
reqwest = "=0.13.2"
serde = { version = "=1.0.228", features = ["derive"] }
serde-wasm-bindgen = "=0.6.5"
# needs to match wasm-bindgen-cli's version in flake.nix
wasm-bindgen = "=0.2.108"
wasm-bindgen-futures = "=0.4.58"
web-sys = { version = "=0.3.85", features = ["console"] }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true        # Link Time Optimization
codegen-units = 1 # Parallel Code Generation Units

[package.metadata.wasm-pack.profile.release]
# wasm-opt doesn't support arm64
# and it only saved us 30 KB
wasm-opt = false
